avance giordan